--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "module": "CommonJS",
     "target": "es2019",
     "declaration": true,
-    "outDir": "./lib"
+    "outDir": "./lib",
+    "newLine": "lf"
   },
   "include": [
     "src/**/*"
