Add task which run all watch scripts parallel

--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "build-docs": "typedoc src/exports.ts",
     "build-lib": "tsc",
     "build-dist": "rollup -c",
-    "watch-docs": "typedoc --watch",
-    "watch-lib": "tsc-watch",
+    "watch": "run-p watch-docs watch-lib watch-dist",
+    "watch-docs": "typedoc --watch --preserveWatchOutput",
+    "watch-lib": "tsc-watch --noClear",
     "watch-dist": "rollup -c -w",
     "lint": "eslint src/**/*"
   },
@@ -49,6 +50,7 @@
     "eslint-config-airbnb-typescript": "^16.0.0",
     "eslint-plugin-tsdoc": "^0.2.14",
     "nlfurniss-typedoc-plugin-sourcefile-url": "^2.0.0",
+    "npm-run-all": "^4.1.5",
     "rollup": "^2.60.1",
     "rollup-plugin-terser": "^7.0.2",
     "tsc-watch": "^4.5.0",
