--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build-dist": "rollup -c",
     "watch": "run-p watch-docs watch-lib watch-dist",
     "watch-docs": "typedoc --watch --preserveWatchOutput",
-    "watch-lib": "tsc-watch --noClear",
+    "watch-lib": "tsc -w",
     "watch-dist": "rollup -c -w",
     "lint": "eslint src/**/*"
   },
@@ -36,7 +36,6 @@
     "eslint-plugin-tsdoc": "^0.2.14",
     "npm-run-all": "^4.1.5",
     "rollup": "^4.21.2",
-    "tsc-watch": "^4.5.0",
     "tslib": "^2.7.0",
     "typedoc": "^0.26.7",
     "typescript": "^5.6.2"
