--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "out": "docs",
     "name": "Crypto Bot API",
     "hideGenerator": true,
+    "githubPages": false,
     "sort": [
       "static-first",
       "visibility",
